--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="app_red">#F44336</color>
+    <color name="transparent_red">#DDF44336</color>
     <color name="dark_red">#D32F2F</color>
     <color name="white">#FFFFFF</color>
     <color name="dark_gray">#616161</color>
