Add ability to edit and delete saved locations

--- a/app/src/main/res/layout/restaurant.xml
+++ b/app/src/main/res/layout/restaurant.xml
@@ -20,6 +20,7 @@
         app:rd_style="@style/button_ripple_attributes"/>
 
     <ScrollView
+        android:background="@color/white"
         android:layout_below="@id/toolbar"
         android:layout_above="@+id/view_on_yelp"
         android:layout_width="match_parent"
