Make restaurants scrollable

--- a/app/src/main/res/menu/restaurant_menu.xml
+++ b/app/src/main/res/menu/restaurant_menu.xml
@@ -9,7 +9,7 @@
         app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/load_new_restaurant"
-        android:title="@string/load_new_restaurant"
+        android:id="@+id/load_random_restaurant"
+        android:title="@string/load_random_restaurant"
         app:showAsAction="ifRoom"/>
 </menu>
