--- a/app/src/main/res/values/restaurant_strings.xml
+++ b/app/src/main/res/values/restaurant_strings.xml
@@ -2,15 +2,7 @@
 <resources>
     <!-- Restaurant menu -->
     <string name="share_restaurant">Share restaurant info</string>
-    <string name="load_new_restaurant">Load new restaurant</string>
-
-    <string name="got_it">Got it</string>
-    <string name="refresh_info">Click the refresh button to immediately load another restaurant suggestion.</string>
-    <string name="map_info">Click the address to immediately start heading over to the restaurant.</string>
-    <string name="phone_info">Click the phone number to give the restaurant a call.</string>
-    <string name="share_info">
-        Eating with friends? Use the share button to tell them all about the restaurant.
-    </string>
+    <string name="load_random_restaurant">Load random restaurant</string>
 
     <string name="navigate_with">Navigate with</string>
     <string name="call_with">Call with</string>
@@ -25,4 +17,12 @@
     <string name="map_icon">{ion-android-map}</string>
 
     <string name="view_on_yelp">View on Yelp</string>
+
+    <string name="instructions_title">Instructions</string>
+    <string name="instructions">
+        1. Swipe left and right to browse restaurants or hit the shuffle button to choose one at random.
+        \n\n2. Click the restaurant\'s address to open it in Google Maps.
+        \n\n3. Click the restaurant\'s phone number to give it a call.
+        \n\nHappy eating!
+    </string>
 </resources>
