--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="default_margin">16dp</dimen>
     <dimen name="design_fab_size_normal" tools:override="true">200dp</dimen>
+    <dimen name="navigation_drawer_width">240dp</dimen>
 </resources>
