--- a/app/src/main/res/values/restaurant_strings.xml
+++ b/app/src/main/res/values/restaurant_strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Restaurant menu -->
+    <string name="favorite_restaurant">Favorite restaurant</string>
+    <string name="unfavorite_restaurant">Unfavorite restaurant</string>
     <string name="share_restaurant">Share restaurant info</string>
     <string name="load_random_restaurant">Load random restaurant</string>
 
