--- a/app/src/main/res/layout/location_cell.xml
+++ b/app/src/main/res/layout/location_cell.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="5dp">
 
     <com.joanzapata.iconify.widget.IconTextView
         android:id="@+id/delete_icon"
