--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/parent"
+    android:orientation="vertical"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,4 +11,4 @@
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
