--- a/app/src/main/res/layout/location_cell.xml
+++ b/app/src/main/res/layout/location_cell.xml
@@ -2,23 +2,16 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:layout_height="wrap_content">
 
     <com.joanzapata.iconify.widget.IconTextView
-        android:id="@+id/delete_icon"
-        android:text="@string/delete_icon"
+        android:id="@+id/list_icon"
+        android:text="@string/list_icon"
         android:layout_alignParentRight="true"
-        style="@style/action_icon"/>
-
-    <com.joanzapata.iconify.widget.IconTextView
-        android:id="@+id/edit_icon"
-        android:text="@string/edit_icon"
-        android:layout_toLeftOf="@+id/delete_icon"
         style="@style/action_icon"/>
 
     <TextView
         android:id="@+id/location"
-        android:layout_toLeftOf="@+id/edit_icon"
+        android:layout_toLeftOf="@+id/list_icon"
         style="@style/action_item"/>
 </RelativeLayout>
