--- a/app/src/main/res/layout/location_cell.xml
+++ b/app/src/main/res/layout/location_cell.xml
@@ -10,8 +10,15 @@
         android:layout_alignParentRight="true"
         style="@style/action_icon"/>
 
+    <com.joanzapata.iconify.widget.IconTextView
+        android:id="@+id/check_icon"
+        android:text="@string/check_icon"
+        android:textColor="@color/green"
+        android:layout_toLeftOf="@+id/list_icon"
+        style="@style/action_icon"/>
+
     <TextView
         android:id="@+id/location"
-        android:layout_toLeftOf="@+id/list_icon"
+        android:layout_toLeftOf="@+id/check_icon"
         style="@style/action_item"/>
 </RelativeLayout>
