--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="app_red">#F44336</color>
     <color name="transparent_red">#DDF44336</color>
     <color name="dark_red">#D32F2F</color>
+
+    <color name="green">#4CAF50</color>
+
     <color name="white">#FFFFFF</color>
     <color name="dark_gray">#616161</color>
     <color name="gray_600">#757575</color>
