--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -1,8 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
-</LinearLayout>
+    <FrameLayout
+        android:id="@+id/search_term_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:padding="10dp">
+
+        <EditText
+            android:id="@+id/search_term"
+            android:hint="@string/search_hint"
+            android:paddingLeft="40dp"
+            android:layout_marginTop="0dp"
+            style="@style/text_input"/>
+
+        <com.joanzapata.iconify.widget.IconTextView
+            android:text="@string/search_icon"
+            android:layout_marginTop="0dp"
+            style="@style/input_icon"/>
+    </FrameLayout>
+
+    <ScrollView
+        android:background="@color/gray_200"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/search_term_container"
+        android:padding="5dp">
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            card_view:contentPadding="5dp"
+            card_view:cardUseCompatPadding="true"
+            card_view:cardBackgroundColor="@color/white"
+            card_view:cardCornerRadius="3dp"
+            card_view:cardElevation="1dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:text="@string/categories"
+                    android:textColor="@color/gray"
+                    android:textSize="16sp"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/gray"
+                    android:layout_marginBottom="5dp"/>
+
+                <FrameLayout
+                    android:id="@+id/american_container"
+                    style="@style/category_container">
+
+                    <TextView
+                        android:text="@string/american"
+                        style="@style/category_text"/>
+
+                    <com.rey.material.widget.CheckBox
+                        android:id="@+id/american_toggle"
+                        style="@style/checkbox_style"/>
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/chinese_container"
+                    style="@style/category_container">
+
+                    <TextView
+                        android:text="@string/chinese"
+                        style="@style/category_text"/>
+
+                    <com.rey.material.widget.CheckBox
+                        android:id="@+id/chinese_toggle"
+                        style="@style/checkbox_style"/>
+                </FrameLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+    </ScrollView>
+</RelativeLayout>
