--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="app_red">#F44336</color>
-    <color name="transparent_red">#DDF44336</color>
     <color name="dark_red">#D32F2F</color>
 
     <color name="green">#4CAF50</color>
@@ -10,4 +9,5 @@
     <color name="dark_gray">#616161</color>
     <color name="gray_600">#757575</color>
     <color name="gray">#9E9E9E</color>
+    <color name="gray_200">#EEEEEE</color>
 </resources>
