--- a/app/src/main/res/values/filter_styles.xml
+++ b/app/src/main/res/values/filter_styles.xml
@@ -17,7 +17,7 @@
     <style name="checkbox_style">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_gravity">end|center_vertical</item>
+        <item name="android:layout_gravity">right|center_vertical</item>
         <item name="cbd_animDuration">@integer/shorter_anim_length</item>
         <item name="cbd_strokeColor">@color/app_red</item>
         <item name="cbd_tickColor">@color/white</item>
