--- a/app/src/main/res/values/filter_strings.xml
+++ b/app/src/main/res/values/filter_strings.xml
@@ -7,6 +7,7 @@
 
     <string name="search_hint">I\'m looking for&#8230;</string>
     <string name="search_icon">{ion-android-search}</string>
+    <string name="clear_icon">{ion-android-close}</string>
 
     <string name="categories">Categories</string>
     <string name="american">American</string>
@@ -21,4 +22,9 @@
     <string name="mexican">Mexican</string>
     <string name="pizza">Pizza</string>
     <string name="thai">Thai</string>
+
+    <string name="clear_confirmation">Clear Confirmation</string>
+    <string name="remove_all_filters">Are you sure you want to remove all of your current filters?</string>
+
+    <string name="filters_updated">Your filters have been updated.</string>
 </resources>
