--- a/app/src/main/res/layout/restaurant.xml
+++ b/app/src/main/res/layout/restaurant.xml
@@ -4,132 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/default_margin">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/restaurant_picture"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center_vertical"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical">
-
-                <TextView
-                    android:id="@+id/restaurant_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:textColor="@color/dark_gray"/>
-
-                <TextView
-                    android:id="@+id/categories"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:textColor="@color/gray_600"/>
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginTop="@dimen/default_margin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/first_star"
-                style="@style/rating_star"/>
-
-            <ImageView
-                android:id="@+id/second_star"
-                style="@style/rating_star"/>
-
-            <ImageView
-                android:id="@+id/third_star"
-                style="@style/rating_star"/>
-
-            <ImageView
-                android:id="@+id/fourth_star"
-                style="@style/rating_star"/>
-
-            <ImageView
-                android:id="@+id/fifth_star"
-                style="@style/rating_star"/>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/num_reviews"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/dark_gray"
-            android:layout_gravity="center_vertical"/>
-
-        <LinearLayout
-            android:id="@+id/address_container"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.joanzapata.iconify.widget.IconTextView
-                android:id="@+id/address_icon"
-                android:text="@string/map_icon"
-                style="@style/restaurant_icon"/>
-
-            <TextView
-                android:id="@+id/address"
-                style="@style/restaurant_info_text"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/phone_number_container"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.joanzapata.iconify.widget.IconTextView
-                android:id="@+id/phone_icon"
-                android:text="@string/phone_icon"
-                style="@style/restaurant_icon"/>
-
-            <TextView
-                android:id="@+id/phone_number"
-                style="@style/restaurant_info_text"/>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/what_people_saying"
-            android:layout_marginTop="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/what_people_saying"
-            android:textColor="@color/black"
-            android:textSize="22sp"
-            android:layout_gravity="center_horizontal"/>
-
-        <TextView
-            android:id="@+id/snippet_text"
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/gray"
-            android:textSize="18sp"
-            android:layout_gravity="center_horizontal"/>
-    </LinearLayout>
+    <include layout="@layout/restaurant_info"/>
 </ScrollView>
