--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="gray_600">#757575</color>
     <color name="gray">#9E9E9E</color>
     <color name="gray_200">#EEEEEE</color>
+    <color name="super_light_gray">#F5F5F5</color>
 
     <color name="black">#000000</color>
 </resources>
