--- a/app/src/main/res/layout/my_locations.xml
+++ b/app/src/main/res/layout/my_locations.xml
@@ -31,8 +31,9 @@
 
                 <ImageView
                     android:id="@+id/plus_icon"
+                    android:contentDescription="@string/add_location"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"/>
             </android.support.v7.widget.CardView>
 
             <EditText
