--- a/app/src/main/res/values/restaurant_strings.xml
+++ b/app/src/main/res/values/restaurant_strings.xml
@@ -17,13 +17,13 @@
     <string name="num_reviews">%d reviews</string>
     <string name="phone_icon">{ion-android-call}</string>
 
-    <string name="view_on_yelp">View on Yelp</string>
+    <string name="view_on_yelp">View more on Yelp {fa-yelp #C41200}</string>
+    <string name="start_heading_here">Start Heading Here</string>
 
     <string name="instructions_title">Instructions</string>
     <string name="instructions">
         1. Swipe left and right to browse restaurants or hit the shuffle button to choose one at random.
-        \n\n2. Click the restaurant\'s address to open it in Google Maps.
-        \n\n3. Click the restaurant\'s phone number to give it a call.
+        \n\n2. Click the restaurant\'s phone number to give it a call.
         \n\nHappy eating!
     </string>
 
