--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
@@ -40,7 +39,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/search_term_container"
-        android:padding="5dp">
+        android:padding="5dp"
+        android:clipToPadding="false">
 
         <android.support.v7.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -133,6 +133,19 @@
 
                     <com.rey.material.widget.CheckBox
                         android:id="@+id/indian_toggle"
+                        style="@style/checkbox_style"/>
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/italian"
+                    style="@style/category_container">
+
+                    <TextView
+                        android:text="@string/italian"
+                        style="@style/category_text"/>
+
+                    <com.rey.material.widget.CheckBox
+                        android:id="@+id/italian_toggle"
                         style="@style/checkbox_style"/>
                 </FrameLayout>
 
