--- a/app/src/main/res/values/filter_strings.xml
+++ b/app/src/main/res/values/filter_strings.xml
@@ -15,6 +15,7 @@
     <string name="fast_food">Fast Food</string>
     <string name="french">French</string>
     <string name="indian">Indian</string>
+    <string name="italian">Italian</string>
     <string name="japanese">Japanese</string>
     <string name="korean">Korean</string>
     <string name="mediterranean">Mediterranean</string>
