--- a/app/src/main/res/layout/restaurant_info.xml
+++ b/app/src/main/res/layout/restaurant_info.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/default_margin">
+    android:padding="@dimen/default_margin"
+    android:gravity="center_horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
