--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -34,212 +34,277 @@
             style="@style/input_icon"/>
     </FrameLayout>
 
+    <View
+        android:id="@+id/search_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray_200"
+        android:layout_below="@+id/search_term_container"/>
+
     <ScrollView
         android:background="@color/gray_200"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/search_term_container"
+        android:layout_below="@+id/search_divider"
         android:padding="5dp"
         android:clipToPadding="false">
 
-        <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            card_view:contentPadding="5dp"
-            card_view:cardUseCompatPadding="true"
-            card_view:cardBackgroundColor="@color/white"
-            card_view:cardCornerRadius="3dp"
-            card_view:cardElevation="1dp">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    android:text="@string/categories"
-                    android:textColor="@color/gray"
-                    android:textSize="16sp"/>
-
-                <View
+            <android.support.v7.widget.CardView style="@style/filter_card">
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/gray"
-                    android:layout_marginBottom="5dp"/>
-
-                <FrameLayout
-                    android:id="@+id/american"
-                    style="@style/category_container">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:text="@string/american"
-                        style="@style/category_text"/>
+                        style="@style/filter_header"
+                        android:text="@string/categories"/>
 
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/american_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
+                    <View style="@style/filter_divider"/>
 
-                <FrameLayout
-                    android:id="@+id/chinese"
-                    style="@style/category_container">
+                    <FrameLayout
+                        android:id="@+id/american"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/american"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/american_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/chinese"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/chinese"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/chinese_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/fast_food"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/fast_food"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/fast_food_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/french"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/french"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/french_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/indian"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/indian"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/indian_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/italian"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/italian"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/italian_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/japanese"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/japanese"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/japanese_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/korean"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/korean"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/korean_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/mediterranean"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/mediterranean"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/mediterranean_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/middle_eastern"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/middle_eastern"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/middle_eastern_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/mexican"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/mexican"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/mexican_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/pizza"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/pizza"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/pizza_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/thai"
+                        style="@style/filter_field_container">
+
+                        <TextView
+                            android:text="@string/thai"
+                            style="@style/filter_field_text"/>
+
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/thai_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                style="@style/filter_card"
+                android:layout_marginTop="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:text="@string/chinese"
-                        style="@style/category_text"/>
+                        style="@style/filter_header"
+                        android:text="@string/distance"/>
 
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/chinese_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
+                    <View style="@style/filter_divider"/>
 
-                <FrameLayout
-                    android:id="@+id/fast_food"
-                    style="@style/category_container">
+                    <FrameLayout
+                        android:id="@+id/very_close"
+                        style="@style/filter_field_container">
 
-                    <TextView
-                        android:text="@string/fast_food"
-                        style="@style/category_text"/>
+                        <TextView
+                            android:text="@string/very_close"
+                            style="@style/filter_field_text"/>
 
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/fast_food_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/very_close_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
 
-                <FrameLayout
-                    android:id="@+id/french"
-                    style="@style/category_container">
+                    <FrameLayout
+                        android:id="@+id/close"
+                        style="@style/filter_field_container">
 
-                    <TextView
-                        android:text="@string/french"
-                        style="@style/category_text"/>
+                        <TextView
+                            android:text="@string/close"
+                            style="@style/filter_field_text"/>
 
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/french_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/close_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
 
-                <FrameLayout
-                    android:id="@+id/indian"
-                    style="@style/category_container">
+                    <FrameLayout
+                        android:id="@+id/far"
+                        style="@style/filter_field_container">
 
-                    <TextView
-                        android:text="@string/indian"
-                        style="@style/category_text"/>
+                        <TextView
+                            android:text="@string/far"
+                            style="@style/filter_field_text"/>
 
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/indian_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/far_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
 
-                <FrameLayout
-                    android:id="@+id/italian"
-                    style="@style/category_container">
+                    <FrameLayout
+                        android:id="@+id/very_far"
+                        style="@style/filter_field_container">
 
-                    <TextView
-                        android:text="@string/italian"
-                        style="@style/category_text"/>
+                        <TextView
+                            android:text="@string/very_far"
+                            style="@style/filter_field_text"/>
 
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/italian_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/japanese"
-                    style="@style/category_container">
-
-                    <TextView
-                        android:text="@string/japanese"
-                        style="@style/category_text"/>
-
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/japanese_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/korean"
-                    style="@style/category_container">
-
-                    <TextView
-                        android:text="@string/korean"
-                        style="@style/category_text"/>
-
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/korean_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/mediterranean"
-                    style="@style/category_container">
-
-                    <TextView
-                        android:text="@string/mediterranean"
-                        style="@style/category_text"/>
-
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/mediterranean_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/middle_eastern"
-                    style="@style/category_container">
-
-                    <TextView
-                        android:text="@string/middle_eastern"
-                        style="@style/category_text"/>
-
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/middle_eastern_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/mexican"
-                    style="@style/category_container">
-
-                    <TextView
-                        android:text="@string/mexican"
-                        style="@style/category_text"/>
-
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/mexican_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/pizza"
-                    style="@style/category_container">
-
-                    <TextView
-                        android:text="@string/pizza"
-                        style="@style/category_text"/>
-
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/pizza_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/thai"
-                    style="@style/category_container">
-
-                    <TextView
-                        android:text="@string/thai"
-                        style="@style/category_text"/>
-
-                    <com.rey.material.widget.CheckBox
-                        android:id="@+id/thai_toggle"
-                        style="@style/checkbox_style"/>
-                </FrameLayout>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+                        <com.rey.material.widget.CheckBox
+                            android:id="@+id/very_far_toggle"
+                            style="@style/checkbox_style"/>
+                    </FrameLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
     </ScrollView>
 </RelativeLayout>
