--- a/app/src/main/res/values/filter_strings.xml
+++ b/app/src/main/res/values/filter_strings.xml
@@ -9,6 +9,7 @@
     <string name="search_icon">{ion-android-search}</string>
     <string name="clear_icon">{ion-android-close}</string>
 
+    <!-- Categories -->
     <string name="categories">Categories</string>
     <string name="american">American</string>
     <string name="chinese">Chinese</string>
@@ -23,6 +24,13 @@
     <string name="mexican">Mexican</string>
     <string name="pizza">Pizza</string>
     <string name="thai">Thai</string>
+
+    <!-- Distances -->
+    <string name="distance">Distance</string>
+    <string name="very_close">Very close (&lt; 1 mile away)</string>
+    <string name="close">Close (&lt; 3 miles away)</string>
+    <string name="far">Far (&lt; 5 miles away)</string>
+    <string name="very_far">Very far (5+ miles away)</string>
 
     <string name="clear_confirmation">Clear Confirmation</string>
     <string name="remove_all_filters">Are you sure you want to remove all of your current filters?</string>
